--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ navigation-fragment = { group = "androidx.navigation", name = "navigation-fragme
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version = "2.9.0" }
 retrofitGson = { module = "com.squareup.retrofit2:converter-gson", version = "2.9.0" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version = "4.9.3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
