--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_DoAn"
         tools:targetApi="31">
+        <activity
+            android:name=".Activity.DetailPizzaActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.profile.ChinhSuaThongTinActivity"
             android:exported="false" />
@@ -22,16 +27,7 @@
             android:exported="false" />
         <activity
             android:name=".Activity.SplashActivity"
-            android:exported="false">
-
-
-        </activity>
-        <activity
-            android:name=".Activity.DangKyActivity"
-            android:exported="false" /> <!-- Đăng ký LoginActivity -->
-        <activity
-            android:name=".Activity.DangNhapActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,12 +35,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity.HoSoNguoiDungActivity"
+            android:name=".Activity.DangKyActivity"
+            android:exported="false" /> <!-- Đăng ký LoginActivity -->
+        <activity
+            android:name=".Activity.DangNhapActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".Activity.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="false" >
-        </activity>
+            android:name=".TestActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
