--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.Android_DoAn"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.DetailSaladActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.DetailSideDishActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.DetailPizzaActivity"
             android:exported="false" />
         <activity
@@ -39,13 +45,14 @@
             android:exported="false" /> <!-- Đăng ký LoginActivity -->
         <activity
             android:name=".Activity.DangNhapActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
             android:exported="false" />
         <activity
             android:name=".TestActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
+        <activity android:name=".Activity.ThemThongTinCaNhanActivity"
+            android:exported="true"/>
     </application>
-
 </manifest>
