--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,4 +30,5 @@ okhttp = { module = "com.squareup.okhttp3:okhttp", version = "4.9.3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version = "1.9.22" }
 
