--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,6 @@
         android:theme="@style/Theme.Android_DoAn"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.DetailSaladActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.DetailSideDishActivity"
-            android:exported="false" />
-        <activity
             android:name=".Activity.DetailPizzaActivity"
             android:exported="false" />
         <activity
@@ -45,14 +39,14 @@
             android:exported="false" /> <!-- Đăng ký LoginActivity -->
         <activity
             android:name=".Activity.DangNhapActivity"
-            android:exported="false" />
+            android:exported="false"></activity>
         <activity
             android:name=".Activity.MainActivity"
             android:exported="false" />
-        <activity
-            android:name=".TestActivity"
-            android:exported="false" />
+        <activity android:name=".Activity.DetailItemActivity"
+            android:exported="false"/>
         <activity android:name=".Activity.ThemThongTinCaNhanActivity"
-            android:exported="true"/>
+            android:exported="false"/>
+
     </application>
 </manifest>
