--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_DoAn"
         tools:targetApi="31">
+        <activity android:name=".ui.profile.GopYActivity" />
+
         <activity
             android:name=".Activity.DetailPizzaActivity"
             android:exported="false" />
@@ -49,6 +51,8 @@
             android:exported="false"/>
         <activity android:name=".Activity.ThemThongTinCaNhanActivity"
             android:exported="false"/>
-
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAQMdmF5rYUyDzXCAE5cADY0udHtKKAk3M"/>
     </application>
 </manifest>
